# par_tipe

./: Cargo.toml
assets/shaders/: agents.wgsl
src/: ants.rs  main.rs
