[package]
name = "par"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold", "-Zshare-generics=y"]

[dependencies]
bevy = {version = "0.17", features = ["dynamic_linking", "experimental_bevy_feathers"] }
rand = "0.9"
itertools = "0.14"
bevy_prototype_lyon = "0.15.0"
